reset button added and stop bug fixed

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </div>
     <button id = "start">start</button>
     <button id = "stop">stop</button>
+    <button id = "reset">reset</button>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
