--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
   </head>
   <body>
     <h2>My static Player</h2>
-    <div>
-    <canvas id="canvas"></canvas>
-  </div>
-    <button id = "start">start</button>
-    <button id = "stop">stop</button>
-    <button id = "reset">reset</button>
+    <button id="start">start</button>
+    <button id="stop">stop</button>
+    <button id="reset">reset</button>
+    <button id="test">test</button>
+
+    <canvas
+      width="300px"
+      height="150px"
+      style="background-color: black"
+      id="canvas"
+    >
+    </canvas>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
