--- a/index.html
+++ b/index.html
@@ -8,19 +8,16 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>My static Player</h2>
-    <button id="start">start</button>
-    <button id="stop">stop</button>
-    <button id="reset">reset</button>
-    <button id="test">test</button>
+    <div class="buttonDiv">
+      <h2>My static Player</h2>
+      <div class="buttons">
+        <button id="start">start</button>
+        <button id="stop">stop</button>
+        <button id="reset">reset</button>
+      </div>
+    </div>
 
-    <canvas
-      width="300px"
-      height="150px"
-      style="background-color: black"
-      id="canvas"
-    >
-    </canvas>
+    <canvas style="background-color: black" id="canvas"> </canvas>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
