labels added and commenting done

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <canvas style="background-color: black" id="canvas"> </canvas>
 
     <script type="text/javascript" src="./script.js"></script>
+    <!-- <script type="text/javascript" src="./bar_data.json"></script> -->
+
   </body>
 </html>
